Fixed Horizontal scroll

--- a/src/assets/_config.sass
+++ b/src/assets/_config.sass
@@ -1,13 +1,8 @@
-@font-face
-  font-family: Kenoky, Arial, Helvetica, sans-serif
-  src: url(https://www.cufonfonts.com/download/rf/kenoky-2)
-
-@font-face
-  font-family: "Cormorant Garamond",Arial,Helvetica,sans-serif
-  src: url(https://www.cufonfonts.com/download/rf/cormorant-garamond)
+@import url('http://fonts.cdnfonts.com/css/kenoky');
+@import url('http://fonts.cdnfonts.com/css/cormorant-garamond');
 
 $secondaryFont: Kenoky, Arial, Helvetica, sans-serif
-$primaryFont: "Cormorant Garamond",Arial,Helvetica,sans-serif
+$primaryFont: "Cormorant Garamond", "Times New Roman", Times, sans-serif
 
 $gray: #dedede
 $ashGray: #707070
